apps/jackett/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: shikanime
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jackett
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jackett
    spec:
      containers:
        - name: jackett
          image: jackett:0.21.2565
          ports:
            - containerPort: 9117
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jackett-config
