apps/jackett/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jackett
  namespace: shikanime
spec:
  serviceName: jackett-headless
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jackett
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jackett
    spec:
      containers:
        - name: jackett
          image: jackett:0.21.1638
          ports:
            - containerPort: 9117
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jackett-config
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 500Mi
