apps/jackett/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: shikanime
spec:
  ports:
    - port: 9117
      targetPort: http
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app.kubernetes.io/name: jackett
