apps/jackett/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett
  namespace: shikanime
spec:
  defaultBackend:
    service:
      name: jackett
      port:
        name: http
  tls:
    - hosts:
        - jackett
